moar z-index? does it fix #20?

--- a/app/assets/stylesheets/resumis/components/_sidebar.scss
+++ b/app/assets/stylesheets/resumis/components/_sidebar.scss
@@ -60,6 +60,7 @@
         li > a {
             padding-left: 30px;
             transition: all 0.2s linear;
+            z-index: 1029;
 
             &:before {
                 @include fa-icon();
